--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@nivo/line": "^0.83.0",
 		"@nivo/pie": "^0.83.0",
 		"formik": "^2.4.2",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-pro-sidebar": "^0.7.1",
