--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"@fontsource/roboto": "^5.0.5",
 		"@fullcalendar/core": "^6.1.8",
 		"@fullcalendar/daygrid": "^6.1.8",
+		"@fullcalendar/interaction": "^6.1.8",
 		"@fullcalendar/list": "^6.1.8",
+		"@fullcalendar/react": "^6.1.8",
 		"@fullcalendar/timegrid": "^6.1.8",
 		"@mui/icons-material": "^5.14.1",
 		"@mui/material": "^5.14.1",
